--- a/package.json
+++ b/package.json
@@ -5,6 +5,11 @@
         "express": "~4.0.0",
         "mongoose": "~3.6.13",
         "body-parser": "~1.0.1",
+        "express-subdomain": "~1.0.3",
+        "passport": "^0.2.1",
+        "passport-local": "^1.0.0",
+        "passport-local-mongoose": "^1.0.0",
+        "express-session": "^1.10.1",
         "openzwave-shared": "~1.0.0"
     }
 }
