--- a/package.json
+++ b/package.json
@@ -17,9 +17,16 @@
         "express-subdomain": "~1.0.3",
         "openzwave-shared": "~1.0.0",
         "express-session": "^1.10.1",
-        "passport": "^0.2.1",
-        "passport-local": "^1.0.0",
-        "passport-local-mongoose": "^1.0.0",
+
+        "faker": "^2.0.x",
+        "oauth2orize": "^1.0.x",
+        "passport": "^0.2.x",
+        "passport-http": "^0.2.x",
+        "passport-http-bearer": "^1.0.x",
+        "passport-oauth2-client-password": "^0.1.x",
+
+        "nconf": "^0.7.1",
+        "winston": "^1.0.1",
         "mocha": "~1.14.0",
         "chai": "~1.8.1",
         "should": "~2.1.0",
